--- a/index.html
+++ b/index.html
@@ -845,10 +845,89 @@
     <!-- Footer Of Amazon -->
 
     <footer>
-        <div class="div-backto-top">
-            <span class="span-backto-top">Back to top</span>
-        </div>
+        <a href="" type="button" style="text-decoration: none;">
+            <div class="div-backto-top">Back to top</div>
 
+        </a>
+
+        <!-- <div style="background-color: #232F3E;"> -->
+
+
+        <div class="footer-details-links" style="background-color: #232F3E;">
+            <!-- Links section 1 -->
+            <div class="link1">
+                <div class="link-heading">
+                    Get to know us
+                </div>
+                <ul style="display: inline-block; list-style-type:none;">
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Careers</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Blog</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">About Amazon</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Investor relations</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Amazon Devices</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Amazon Science</a></li>
+
+                </ul>
+            </div>
+            <!-- Link section 2 -->
+            <div class="link1">
+                <div class="link-heading">
+                    Make money with us
+                </div>
+                <ul style="display: inline-block; list-style-type:none;">
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Sell products on Amazon</a>
+                    </li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Sell on Amazon Business</a>
+                    </li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Sell apps on Amazon</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Become an Affiliate</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Advertise Your Products</a>
+                    </li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Self-Publish with Us</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Host an Amazon Hub</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Self-Publish with Us</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">› See More Make Money with
+                            Us</a>
+                    </li>
+
+                </ul>
+            </div>
+            <!-- Link Section 3 -->
+            <div class="link1">
+                <div class="link-heading">
+                    Amazon Payment Products
+                </div>
+                <ul style="display: inline-block; list-style-type:none;">
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Amazon Business Card</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Shop with Points</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Reload Your Balancen</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Amazon Currency Converter</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- Link Section 4 -->
+            <div class="link1">
+                <div class="link-heading">
+                    Let US Help You
+                </div>
+                <ul style="display: inline-block; list-style-type:none;">
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Amazon and COVID-19</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Your Account</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Your Orders</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Shipping Rates & Policies</a>
+                    </li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Returns & Replacements</a></li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Manage Your Content and
+                            Devices</a>
+                    </li>
+                    <li class="link-li"><a href="http://www.Amazon.com" class="link">Help</a></li>
+
+                </ul>
+            </div>
+
+        </div>
+        <!-- <hr style="margin: 20px; color: black;"> -->
+        </div>
 
     </footer>
 
